<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DPP Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">Error !</string>
    <string name="error_msg">There is an error!</string>
    <string name="no_items">No User Search Found !</string>
    <string name="title_profile_activity">Profile WP</string>
    <string name="DL_Nama_Kelurahan">Nama Kelurahan</string>
    <string name="title_activity_data_pbb">DataPBB</string>
    <string name="title_activity_data_hotel">DataHotel</string>
    <string name="title_activity_data_restoran">DataRestoran</string>
    <string name="title_activity_data_parkir">DataParkir</string>
    <string name="title_activity_data_hiburan">DataHiburan</string>
    <string name="action_tambahPBB">Tambah PBB</string>
    <string name="action_cari">Cari</string>
    <string name="action_ubahObjPajak">Ubah Objek Pajak</string>
    <string name="action_hapusObjPajak">Hapus Objek Pajak</string>
    <string name="search_prompt">Pilih Kategori</string>
    <string name="action_get_coordinates">Get Coordinates</string>

    <string-array name="search_arrays">
        <item>Alamat Objek Pajak</item>
        <item>NIK</item>
        <item>NOP</item>
        <item>NPWPD</item>
        <item>Nama Subjek Pajak</item>
    </string-array>

    <string-array name="status_subjek_pajak">
        <item>Pemilik</item>
        <item>Penyewa</item>
        <item>Pengelola</item>
        <item>Pemakai</item>
        <item>Sengketa</item>
    </string-array>
    <string-array name="pekerjaan_subjek_pajak">
        <item>PNS</item>
        <item>ABRI</item>
        <item>Pensiunan</item>
        <item>Badan</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="jenis_tanah">
        <item>Tanah + Bangunan</item>
        <item>Kavling Siap Bangun</item>
        <item>Tanah Kosong</item>
        <item>Fasilitas Umum</item>
    </string-array>

    <string name="title_activity_activity_data_reklame">activity_data_reklame</string>
    <string name="button_updateSubjekPajak">Update Subjek Pajak</string>
    <string name="action_tambahSubjekPajak">Tambah Subjek Pajak</string>
    <string name="button_addSubjekPajak">Tambah Subjek Pajak</string>
    <string name="button_addObjekPajak">Tambah Objek Pajak</string>
    <string name="button_updateObjekPajak">Update Objek Pajak</string>
    <string name="action_tambahHiburan">Tambah Usaha Hiburan</string>
    <string name="action_tambahHotal">Tambah Usaha Hotel</string>
    <string name="action_tambahParkir">Tambah Usaha Parkir</string>
    <string name="action_tambahReklame">Tambah Usaha Reklame</string>
    <string name="action_tambahRestoran">Tambah Usaha Restoran</string>

</resources>
