<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainListActivity" >
    <item android:id="@+id/action_cari"
        android:title="@string/action_cari"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_tambahSubjekPajak"
        android:title="@string/action_tambahSubjekPajak"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_tambahPBB"
        android:title="@string/action_tambahPBB"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_tambahHiburan"
        android:title="@string/action_tambahHiburan"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_tambahHotel"
        android:title="@string/action_tambahHotal"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_tambahParkir"
        android:title="@string/action_tambahParkir"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_tambahReklame"
        android:title="@string/action_tambahReklame"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_tambahRestoran"
        android:title="@string/action_tambahRestoran"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
